--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^3.11.2",
-    "@scalar/api-reference": "^1.20.31"
+    "@scalar/api-reference": "^1.20.31",
+    "debug-esm": "0.0.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.1.5",
